[gd_scene load_steps=4 format=3 uid="uid://s625lu76gpkv"]

[ext_resource type="Script" path="res://scenes/ui/card_menu.gd" id="1_5rbhw"]
[ext_resource type="Resource" uid="uid://n3va254ct6b3" path="res://characters/warrior/cards/warrior_slash.tres" id="2_ifalx"]
[ext_resource type="PackedScene" uid="uid://beeeqofpbi427" path="res://scenes/ui/card_visuals.tscn" id="3_s4pjh"]

[node name="CardMenuUi" type="CenterContainer"]
offset_right = 25.0
offset_bottom = 30.0
size_flags_horizontal = 3
script = ExtResource("1_5rbhw")
card = ExtResource("2_ifalx")

[node name="Visuals" parent="." instance=ExtResource("3_s4pjh")]
layout_mode = 2

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
